<resources>
    <string name="app_name">Water Intake Reminder</string>
    <string name="main_screen">Main Screen</string>
    <string name="stay_hydrated">Stay hydrated</string>
    <string name="username">Username</string>
    <string name="text_main_dailygoal_value_placeholder">_</string>
    <string name="text_main_consumed_value_placeholder">_</string>
    <string name="daily_goal">Daily goal </string>
    <string name="consumed">Consumed </string>
    <string name="drink_button_description">Drink button</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="water">Water</string>
    <string name="intake">Intake</string>
    <string name="reminder">Reminder</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_signup">Confirm signup</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin_email">Sign in with Email</string>
    <string name="product_phrase">Keep track of your hydration level</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="streak">Streak</string>
    <string name="not_added">N/A</string>
    <string name="zero">0</string>
    <string name="profile_water_intake_goal">Water intake goal</string>
    <string name="water_intake_with_exercise">Water with exercise</string>
    <string name="weight_goal">Weight goal</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="go">GO</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit profile</string>
    <string name="action_back_description">Action back</string>
    <string name="general">General</string>
    <string name="personal">Personal</string>
    <string name="info_popup">These values are used to automatically calculate your daily water intake. You can edit it manually later.</string>
    <string name="current_weight">Current weight</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="button_save_changes">Button save changes</string>
    <string name="button_personal_information">Button personal information</string>
    <string name="goals">Goals</string>
    <string name="hint_lbs">lbs</string>
    <string name="hint_oz">oz</string>
</resources>
