<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_statistics"
        android:enabled="true"
        android:icon="@drawable/ic_action_statistics"
        android:title="@string/statistics"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>