<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_wir_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <TextView
        style="@style/WirLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/water" />

    <TextView
        style="@style/WirLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intake" />

    <TextView
        style="@style/WirLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder" />

</LinearLayout>