<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_main_stayhydrated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/radius_5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_main_stayhydrated"
                style="@style/WirLogoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/margin_24dp"
                android:text="@string/stay_hydrated" />

            <TextView
                android:id="@+id/text_main_username"
                style="@style/Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_main_stayhydrated"
                android:text="@string/username" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_main_goals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_8dp"
        android:layout_weight="0.4"
        app:cardCornerRadius="@dimen/radius_5dp">

        <RelativeLayout
            android:id="@+id/layout_main_goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_dailygoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_main_dailygoal"
                    style="@style/ProfileUserInfoGoalsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_goal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/text_main_dailygoal_value"
                    style="@style/ProfileUserInfoGoalsText.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_consumed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_dailygoal"
                android:layout_marginBottom="@dimen/margin_24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_main_consumed"
                    style="@style/ProfileUserInfoGoalsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/text_main_consumed_value"
                    style="@style/ProfileUserInfoGoalsText.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_main_waterwheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_24dp">

            <!--todo Change progress programmatically on click-->
            <ProgressBar
                android:id="@+id/progress_circular"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:progress="75"
                android:progressDrawable="@drawable/progress_circle"
                android:rotation="-90" />

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/glass"
                android:contentDescription="@string/drink_button_description" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>