<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!--TODO Extract common text styles to separate xml-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_main_stayhydrated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="@dimen/radius_5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_main_stayhydrated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:text="@string/stay_hydrated"
                    style="@style/WirLogoText"/>

                <TextView
                    android:id="@+id/text_main_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Username"
                    android:layout_below="@id/text_main_stayhydrated"
                    android:text="@string/username" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_main_goals"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_8dp"
            android:layout_weight="0.4"
            app:cardCornerRadius="@dimen/radius_5dp">

            <RelativeLayout
                android:id="@+id/layout_main_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_dailygoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_main_dailygoal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/daily_goal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/primaryDarkColor"
                        android:textSize="@dimen/textsize_main_small" />

                    <TextView
                        android:id="@+id/text_main_dailygoal_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:layout_marginLeft="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/text_main_dailygoal_value_placeholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/primaryAccentColor"
                        android:textSize="@dimen/textsize_main_small" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_consumed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_dailygoal"
                    android:layout_marginBottom="@dimen/margin_24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_main_consumed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/consumed"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/primaryDarkColor"
                        android:textSize="@dimen/textsize_main_small" />

                    <TextView
                        android:id="@+id/text_main_consumed_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:layout_marginLeft="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/text_main_consumed_value_placeholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/primaryAccentColor"
                        android:textSize="@dimen/textsize_main_small" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_main_waterwheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_24dp">

                <!--todo change progress programmatically on click-->
                <ProgressBar
                    android:id="@+id/progress_circular"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:progress="75"
                    android:progressDrawable="@drawable/progress_circle"
                    android:rotation="-90" />

                <ImageButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/glass"
                    android:contentDescription="@string/drink_button_description" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@color/secondaryAccentColor"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@android:color/white"
            app:menu="@menu/bottom_nav_menu" />

    </LinearLayout>
</RelativeLayout>